--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,44 @@ h1{
     font-family: 'Times New Roman', Times, serif;
 }
 
+
+.copyright{
+    color: cyan;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    
+}
+
+.news{
+    background-color: rgb(218, 176, 176);
+    padding: 50px 0 32px;
+}
+
+article{
+    width: 768;
+    margin: 0 auto 32px;
+    padding: 6px 15px;
+    border-bottom: 1px solid crimson  ;
+}
+
+article a:hover{
+    color: rgb(251, 255, 0);
+}
+
+article h2{
+    font-family: Arial, Helvetica, sans-serif;
+    margin: bottom 25px; ;
+}
+
+article-meta{
+    color: brown;
+    margin: bottom 5px;;
+}
+article img{
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+
 footer{
     padding-top: 20px;
     padding-bottom: 60px;
@@ -31,8 +69,8 @@ footer .links{
 
 footer .links>a{
     color: fuchsia;
-    padding: 30px;
-    font-size:25px ;
+    padding: 20px;
+    font-size:20px ;
     font-weight:600;
     letter-spacing: 0;
     text-decoration: none;
@@ -40,10 +78,3 @@ footer .links>a{
 
 
 }
-
-.copyright{
-    color: cyan;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    
-}
-
