--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ header {
     align-items: center;
     justify-content: center;
     height: 400px;
-    background:url(/images/georgievskoi-lentoi-dlya-prezentatsi-32.jpg) bottom no-repeat;
+    background:url(/images/новости\ голова.png) bottom no-repeat;
 background-size: cover ;
 
     
@@ -17,8 +17,8 @@ h1{
     color: rgb(226, 206, 206);
     font-size: 10rem;
     font-family: 'Times New Roman', Times, serif;
+    
 }
-
 
 .copyright{
     color: cyan;
@@ -26,10 +26,17 @@ h1{
     
 }
 
-.news{
-    background-color: rgb(218, 176, 176);
+.news,.news3,.news5{
+    
     padding: 50px 0 32px;
-}
+    background-color: rgb(218, 176, 176);}
+
+    .news2,.news4{
+        background-color: dimgrey;
+        padding: 50px 0 32px;
+    }
+   
+
 
 article{
     width: 768;
@@ -78,3 +85,4 @@ footer .links>a{
 
 
 }
+
